tests/fail/to_many_arguments.rs
#[log_attributes::log(info, "{fn} was executed", asdf)]
fn to_many_arguments() {}

fn main() {}
